--- a/backend/functions/embedding-service/requirements.txt
+++ b/backend/functions/embedding-service/requirements.txt
@@ -1,4 +1,10 @@
 functions-framework==3.*
 openai==1.3.0
 google-cloud-firestore==2.13.1
+google-cloud-storage==2.*
+google-cloud-logging==3.*
+flask==2.*
+opencv-python==4.*
+numpy==1.*
+pillow==10.*
 sentence-transformers==2.2.2
