--- a/backend/functions/embedding-service/requirements.txt
+++ b/backend/functions/embedding-service/requirements.txt
@@ -1,10 +1,10 @@
-functions-framework==3.*
-openai==1.3.0
+functions-framework==3.8.0
+openai==1.3.7
 google-cloud-firestore==2.13.1
-google-cloud-storage==2.*
-google-cloud-logging==3.*
-flask==2.*
-opencv-python==4.*
-numpy==1.*
-pillow==10.*
+google-cloud-storage==2.10.0
+google-cloud-logging==3.8.0
+flask==3.0.0
+opencv-python-headless==4.8.1.78
+numpy>=1.26.0
+pillow>=10.2.0
 sentence-transformers==2.2.2
