--- a/backend/functions/link-service/requirements.txt
+++ b/backend/functions/link-service/requirements.txt
@@ -1,4 +1,4 @@
-functions-framework==3.5.0
+functions-framework==3.8.0
 google-cloud-logging==3.8.0
 google-cloud-firestore==2.13.1
 google-cloud-storage==2.10.0
@@ -6,4 +6,4 @@ requests==2.31.0
 beautifulsoup4==4.12.2
 openai==1.3.7
 flask==3.0.0
-lxml==4.9.3
+lxml>=5.0.0
