--- a/backend/functions/project-init-service/requirements.txt
+++ b/backend/functions/project-init-service/requirements.txt
@@ -1,4 +1,4 @@
-functions-framework==3.*
+functions-framework==3.8.0
 google-cloud-storage==2.10.0
 google-cloud-firestore==2.13.1
 google-cloud-logging==3.8.0
