--- a/backend/functions/search-service/requirements.txt
+++ b/backend/functions/search-service/requirements.txt
@@ -1,5 +1,5 @@
-functions-framework==3.*
+functions-framework==3.8.0
 google-cloud-firestore==2.13.1
 google-cloud-logging==3.8.0
 flask==3.0.0
-numpy==1.24.3
+numpy>=1.26.0
